@@ -209,6 +209,147 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
+DECL|method|testNumeric
+specifier|public
+name|void
+name|testNumeric
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|SpellingQueryConverter
+name|converter
+init|=
+operator|new
+name|SpellingQueryConverter
+argument_list|()
+decl_stmt|;
+name|converter
+operator|.
+name|init
+argument_list|(
+operator|new
+name|NamedList
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|converter
+operator|.
+name|setAnalyzer
+argument_list|(
+operator|new
+name|WhitespaceAnalyzer
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|String
+index|[]
+name|queries
+init|=
+block|{
+literal|"12345"
+block|,
+literal|"foo:12345"
+block|,
+literal|"12345 67890"
+block|,
+literal|"foo:(12345 67890)"
+block|,
+literal|"foo:(life 67890)"
+block|,
+literal|"12345 life"
+block|,
+literal|"+12345 +life"
+block|,
+literal|"-12345 life"
+block|}
+decl_stmt|;
+name|int
+index|[]
+name|tokensToExpect
+init|=
+block|{
+literal|1
+block|,
+literal|1
+block|,
+literal|2
+block|,
+literal|2
+block|,
+literal|2
+block|,
+literal|2
+block|,
+literal|2
+block|,
+literal|2
+block|}
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|queries
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|Collection
+argument_list|<
+name|Token
+argument_list|>
+name|tokens
+init|=
+name|converter
+operator|.
+name|convert
+argument_list|(
+name|queries
+index|[
+name|i
+index|]
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+literal|"tokens Size: "
+operator|+
+name|tokens
+operator|.
+name|size
+argument_list|()
+operator|+
+literal|" is not: "
+operator|+
+name|tokensToExpect
+index|[
+name|i
+index|]
+argument_list|,
+name|tokens
+operator|.
+name|size
+argument_list|()
+operator|==
+name|tokensToExpect
+index|[
+name|i
+index|]
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+annotation|@
+name|Test
 DECL|method|testSpecialChars
 specifier|public
 name|void
